--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@ https://brodiecodie.github.io/1/
                     </div>
 
                     <div class="col-md-4 col-sm-4">
-                        <img src="images/about-image3.jpg" class="img-responsive" alt="Blog Image">
+                        <img src="https://github.com/CyberSector/Blog/blob/master/images/about-image3.jpg?raw=true" class="img-responsive" alt="Blog Image">
                         <h3>The Result</h3>
                         <p>The result of a penetration test is an in-depth report. For each finding, we determine the risk of vulnerability using the CVSS 3.0 methodology</p>
 
