--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@ https://brodiecodie.github.io/1/
                     </div>
 
                     <div class="col-md-4 col-sm-4">
-                        <img src="images/about-image2.jpg" class="img-responsive" alt="Blog Image">
+                        <img src="https://github.com/CyberSector/Blog/blob/master/images/shutterstock_1173031021.jpg" class="img-responsive" alt="Blog Image">
                         <h3>The Test</h3>
                         <p>The goal of a network penetration test is to assess the security of a customer’s full network infrastructure. It consist of open source intelligence gathering, network vulnerability scanning, exploitation of vulnerable services,
                             and lateral movement through a network.</p>
