--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Are you starting a new business venture and need a website? Offering everything from IT Security Testing to Complete Web Development #BrodieCodie">
+    <meta name="keywords" content="Web,Development,HTML,Design,Brodie,Codie,BrodieCodie,2019,How to,creator,advice,learn,courses,services,tutorial,Security,Pentester">
+    <meta name="author" content="Brodie Codie">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Cyber Sector</title>
