--- a/single-post.html
+++ b/single-post.html
@@ -5,9 +5,9 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="">
-    <meta name="keywords" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Are you starting a new business venture and need a website? Offering everything from IT Security Testing to Complete Web Development #BrodieCodie">
+    <meta name="keywords" content="Web,Development,HTML,Design,Brodie,Codie,BrodieCodie,2019,How to,creator,advice,learn,courses,services,tutorial,Security,Pentester">
+    <meta name="author" content="Brodie Codie">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Cyber Sector - 1st Post</title>
@@ -165,19 +165,19 @@ https://brodiecodie.github.io/1/
                 <div class="col-md-12 col-sm-12">
                     <ul class="social-icon">
                         <li>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-facebook"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-twitter"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-google-plus"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-google-plus"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-dribbble"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-dribbble"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-linkedin"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-linkedin"></a>
                         </li>
                     </ul>
                 </div>
