--- a/gallery.html
+++ b/gallery.html
@@ -119,20 +119,21 @@ https://brodiecodie.github.io/1/
                 <div class="col-md-12 col-sm-12">
                     <ul class="social-icon">
                         <li>
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-facebook"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-twitter"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-google-plus"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-google-plus"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-dribbble"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-dribbble"></a>
                         </li>
                         <li>
-                            <a href="#" class="fa fa-linkedin"></a>
+                            <a href="https://hackerone.com/brodie_codie" class="fa fa-linkedin"></a>
                         </li>
+                    </ul>
                     </ul>
                 </div>
 
