--- a/single-post.html
+++ b/single-post.html
@@ -104,7 +104,7 @@ https://brodiecodie.github.io/1/
                             <blockquote>Remember that security is a process and not a product. </blockquote>
                             <p>Blessed to have a career that is also his favorite hobby, Remember that security is a process and not a product. Everyone makes mistakes. The most important thing is that you learn from them. If you learn from your mistakes,
                                 then you have not actually failed. The real failure is when you made a mistake, but you never learn. I have always had a drive to explore new concepts and ideas. As a kid I spent most of my time pursuing risky attempts
-                                to explore the world of chemistry, electronics, and computing rather than going out with friends; I was testing chemical reactions, almost blinded myself when I made an makeshift explosion in my living room *Do not close
+                                to explore the world of chemistry and electronics instead of going out; I was testing chemical reactions, almost blinded myself when I made an makeshift explosion in my living room *Do not close
                                 copper chloride and aluminum foil in a glass beaker*.</p>
 
 
